--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -55,7 +55,8 @@ const currentYear = new Date().getFullYear();
 		<meta charset="UTF-8" />
 		<meta name="description" content={effectiveDescription} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" /> {/* TODO: Replace with actual favicon */}
+		<link rel="icon" type="image/png" href="/favicons/favicon_white2-07.png" />
+    <link rel="apple-touch-icon" href="/favicons/cropped-favicon-06-300x300.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{effectiveTitle}</title>
 
@@ -119,7 +120,7 @@ const currentYear = new Date().getFullYear();
       <div class="container">
         <div class="footer-main-content">
           <div class="footer-column footer-logo-column">
-            <img src="/uploads/media/favicon_white2-07.png" alt="Logo" class="footer-logo" />
+            <img src="/favicons/favicon_white2-07.png" alt="Logo" class="footer-logo" />
           </div>
           <div class="footer-column footer-intro-column">
             <h4>Tady to nemusí končit</h4>
